# swapi-a-star-wars-api

./: .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
frontend/: index.html  main.js  style.css
frontend/src/app/: app-routing.module.ts  app.module.ts  infinite-scroll.directive.ts
frontend/src/app/dataset-details/: dataset-details.component.css  dataset-details.component.html  dataset-details.component.ts
frontend/src/app/dataset-list/: dataset-list.component.html  dataset-list.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
swapi_app/: apps.py  cache.py  models.py  tasks.py  urls.py  views.py
swapi_app/api/: serializers.py  urls.py  views.py
swapi_app/migrations/: 0001_initial.py
swapi_app/templates/: base.html  index.html
swapi_app/tests/: test_tasks.py  test_views.py
swapi_project/: asgi.py  settings.py  urls.py  wsgi.py
